fix: formatted all code with prettier

--- a/src/locales/en/en.json
+++ b/src/locales/en/en.json
@@ -31,11 +31,26 @@
     "notFound": "Not Found",
     "backHome": "Back Home",
 
-    "resume-newest-title" : "Yacooba - Fullstack developer",
-    "resume-newest-subtitle" : "Remote",
-    "resume-newest-text" : "Due to the fascination of the blockchain world, I ended up wanting to change careers, I felt that I needed to push my path and get new challenges. visual (Atomic Design) with React components, accompanied by unit tests and Storybook to validate the implementation of the same component. The pages of each of the microfrontends we have in our NextJS project are served statically at build time.(SSG). I'm developing the company's backend solution with a domain driven development approach, in which I conclude that when transposing the business logic, it makes it more difficult for errors to occur in the backend, I currently use nodeJS with typescript. I'm developing the company's backend solution with a domain driven development approach, in which I conclude that when transposing the business logic, it makes it more difficult for errors to occur in the backend, I currently use nodeJS with typescript. I had contact with smart contracts (solidity) using openzeppelin standards with the help of hardhat and lib ethers.js and web3.js launching a contract made in ERC721 on the Ethereum network",
-    "resume-newest-note" : "",
-    "resume-newest-tech-summary": ["TypeScript", "NextJS", "MaterialUI", "Storybook", "Git", "NodeJS", "DDD", "Postgres", "GraphQL", "ethers", "web3", "Hardhat", "Solidity", "Blockchain"],
+    "resume-newest-title": "Yacooba - Fullstack developer",
+    "resume-newest-subtitle": "Remote",
+    "resume-newest-text": "Due to the fascination of the blockchain world, I ended up wanting to change careers, I felt that I needed to push my path and get new challenges. visual (Atomic Design) with React components, accompanied by unit tests and Storybook to validate the implementation of the same component. The pages of each of the microfrontends we have in our NextJS project are served statically at build time.(SSG). I'm developing the company's backend solution with a domain driven development approach, in which I conclude that when transposing the business logic, it makes it more difficult for errors to occur in the backend, I currently use nodeJS with typescript. I'm developing the company's backend solution with a domain driven development approach, in which I conclude that when transposing the business logic, it makes it more difficult for errors to occur in the backend, I currently use nodeJS with typescript. I had contact with smart contracts (solidity) using openzeppelin standards with the help of hardhat and lib ethers.js and web3.js launching a contract made in ERC721 on the Ethereum network",
+    "resume-newest-note": "",
+    "resume-newest-tech-summary": [
+      "TypeScript",
+      "NextJS",
+      "MaterialUI",
+      "Storybook",
+      "Git",
+      "NodeJS",
+      "DDD",
+      "Postgres",
+      "GraphQL",
+      "ethers",
+      "web3",
+      "Hardhat",
+      "Solidity",
+      "Blockchain"
+    ],
 
     "resume-first-title": "Nearsoft Solutions - Fullstack developer",
     "resume-first-subtitle": "Funchal, Madeira / Portugal",
