chore: cv 2023 en

--- a/src/locales/en/en.json
+++ b/src/locales/en/en.json
@@ -95,6 +95,7 @@
     "cv-select-option": "Select an option",
     "cv-resume": "Summary",
     "cv-complete": "Extended",
-    "cv-newest": "Newest"
+    "cv-newest": "Newest",
+    "cv-en": "English"
   }
 }
