--- a/src/locales/fr/fr.json
+++ b/src/locales/fr/fr.json
@@ -95,6 +95,7 @@
     "cv-select-option": "Sélectionnez une option",
     "cv-resume": "Résumé",
     "cv-complet": "Complet",
-    "cv-newest": "Novo"
+    "cv-newest": "Novo",
+    "cv-en": "English"
   }
 }
