--- a/src/locales/pt/pt.json
+++ b/src/locales/pt/pt.json
@@ -94,6 +94,7 @@
     "cv-select-option": "Selecione uma opção",
     "cv-resume": "Resumo",
     "cv-complete": "Completo",
-    "cv-newest": "Novo"
+    "cv-newest": "Novo",
+    "cv-en": "English"
   }
 }
